--- a/Python/modulo1_tema4_Py.ipynb
+++ b/Python/modulo1_tema4_Py.ipynb
@@ -31,6 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)**\n",
     "[**Abre en Colab**](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)"
    ]
   },
