--- a/Python/modulo1_tema4_Py.ipynb
+++ b/Python/modulo1_tema4_Py.ipynb
@@ -417,7 +417,7 @@
    "source": [
     "< [Índice](modulo1_tema4_Py_00_indice.ipynb) | [Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb) >\n",
     "\n",
-    "[<span style=\"color:white;background-color:#1E90FF;font-size: 110%;border:2px solid #4682B4;text-decoration:underline\" title=\"Abre y Ejecuta en Google Colaboratory\">|  Abre en Colab  |</span>](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)*: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
    ]
   }
  ],
