--- a/Python/modulo1_tema4_Py_00_indice.ipynb
+++ b/Python/modulo1_tema4_Py_00_indice.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Ferran Carrascosa Mallafrè*"
+    "*Ferran Carrascosa Mallafrè*\n",
+    "\n",
+    "*Licenciado en Matemáticas por la Universidad de Barcelona. Data Scientist*"
    ]
   },
   {
