--- a/Python/modulo1_tema4_Py_10_elem_bas.ipynb
+++ b/Python/modulo1_tema4_Py_10_elem_bas.ipynb
@@ -369,8 +369,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 166 µs, sys: 19 µs, total: 185 µs\n",
-      "Wall time: 187 µs\n"
+      "CPU times: user 566 µs, sys: 43 µs, total: 609 µs\n",
+      "Wall time: 616 µs\n"
      ]
     }
    ],
@@ -394,8 +394,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 87 µs, sys: 437 µs, total: 524 µs\n",
-      "Wall time: 527 µs\n"
+      "CPU times: user 1.99 ms, sys: 0 ns, total: 1.99 ms\n",
+      "Wall time: 2 ms\n"
      ]
     }
    ],
@@ -429,15 +429,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "buidatHAndook.ipynb\t\t      modulo1_tema4_Py_32_pandas.ipynb\r\n",
-      "especies.png\t\t\t      modulo1_tema4_Py_40_contr_flujo.ipynb\r\n",
-      "holaMundo.py\t\t\t      modulo1_tema4_Py_50_gest_dat.ipynb\r\n",
-      "importa_starwars.ipynb\t\t      modulo1_tema4_Py_60_anexo.ipynb\r\n",
-      "modulo1_tema4_Py_00_indice.ipynb      modulo1_tema4_Py.ipynb\r\n",
-      "modulo1_tema4_Py_10_elem_bas.ipynb    README.md\r\n",
-      "modulo1_tema4_Py_20_matplotlib.ipynb  requirementsColab.txt\r\n",
-      "modulo1_tema4_Py_30_colec_obj.ipynb   Untitled.ipynb\r\n",
-      "modulo1_tema4_Py_31_numpy.ipynb       www\r\n"
+      "holaMundo.py\t\t\t      modulo1_tema4_Py_40_contr_flujo.ipynb\r\n",
+      "modulo1_tema4_Py_00_indice.ipynb      modulo1_tema4_Py_50_gest_dat.ipynb\r\n",
+      "modulo1_tema4_Py_10_elem_bas.ipynb    modulo1_tema4_Py_60_anexo.ipynb\r\n",
+      "modulo1_tema4_Py_20_matplotlib.ipynb  modulo1_tema4_Py.ipynb\r\n",
+      "modulo1_tema4_Py_30_colec_obj.ipynb   README.md\r\n",
+      "modulo1_tema4_Py_31_numpy.ipynb       requirementsColab.txt\r\n",
+      "modulo1_tema4_Py_32_pandas.ipynb      www\r\n",
+      "modulo1_tema4_Py_32_pandas.Rmd\r\n"
      ]
     }
    ],
@@ -543,7 +542,7 @@
    "source": [
     "< [Introducción](modulo1_tema4_Py.ipynb) | [Índice](modulo1_tema4_Py_00_indice.ipynb) | [Gráficos con matplotlib](modulo1_tema4_Py_20_matplotlib.ipynb) >\n",
     "\n",
-    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_10_elem_bas.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_10_elem_bas.ipynb)__"
    ]
   }
  ],
