--- a/Python/modulo1_tema4_Py_20_matplotlib.ipynb
+++ b/Python/modulo1_tema4_Py_20_matplotlib.ipynb
@@ -973,7 +973,7 @@
    "source": [
     "< [Elementos básicos de Python](modulo1_tema4_Py_10_elem_bas.ipynb) | [Índice](modulo1_tema4_Py_00_indice.ipynb) | < [Colecciones de objetos: listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb) >\n",
     "\n",
-    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_20_matplotlib.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_20_matplotlib.ipynb)__"
    ]
   }
  ],
