--- a/Python/modulo1_tema4_Py_30_colec_obj.ipynb
+++ b/Python/modulo1_tema4_Py_30_colec_obj.ipynb
@@ -571,7 +571,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -754,7 +756,7 @@
     "\n",
     "bacon, huevos = desayuno(bacon = \"muy hecho\", huevos = 2)\n",
     "\n",
-    "print(\"Quiero el bacon\", bacon,\"y\",huevos,\"huevos\")"
+    "print(\"Quiero el bacon {} y {} huevos\".format(bacon,huevos))"
    ]
   },
   {
@@ -1261,7 +1263,7 @@
    "source": [
     "< [Gráficos con matplotlib](modulo1_tema4_Py_20_matplotlib.ipynb) | [Índice](modulo1_tema4_Py_00_indice.ipynb) | [Colecciones de objetos: numpy](modulo1_tema4_Py_31_numpy.ipynb) >\n",
     "\n",
-    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_30_colec_obj.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_30_colec_obj.ipynb)__"
    ]
   }
  ],
