--- a/Python/modulo1_tema4_Py_32_pandas.ipynb
+++ b/Python/modulo1_tema4_Py_32_pandas.ipynb
@@ -39,9 +39,7 @@
     "\n",
     "Abreviación de Panel Data, los objetos pandas dan soporte al análisi de datos con variables de distinta tipología: categóricas, binarias, numéricas...\n",
     "\n",
-    "Dan soporte al análisis de series temporales, no necesariamente con una frecuencia fija.\n",
-    "\n",
-    "Permiten indexar las filas y columnas.\n",
+    "Respecto a los numpy, permiten indexar las filas y columnas. Este tipo de indexación, facilita, por ejemplo, realizar análisis de series temporales, no necesariamente con una frecuencia fija.\n",
     "\n",
     "Como siempre el primer paso es cargar la librería con *namespace* `pd`"
    ]
@@ -383,7 +381,7 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns; sns.set()  # for plot styling\n",
+    "import seaborn as sns; sns.set()  # para el estilo de graficos\n",
     "\n",
     "entidades = ['planets','starships','vehicles','people','species']\n",
     "entidades_df = {x: pd.read_pickle('www/' + x + '_df.pkl') for x in entidades}\n",
@@ -2351,16 +2349,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ALINEAMIENTO DE LOS ÍNDICES\n",
+    "### FUNCIONES UNIVERSALES SOBRE PANDAS\n",
     "\n",
-    "Cuando se realizan operaciones entre dos pandas, los índices fila y columna se alinean automáticamente.\n",
-    "\n",
-    "Veamos un ejemplo."
+    "Las funciones universales (ufunc) que se han visto en el capítulo anterior, se pueden aplicar de igual modo sobre objetos pandas."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rotation_period</th>\n",
+       "      <th>diameter</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Glee Anselm</th>\n",
+       "      <td>5.744563</td>\n",
+       "      <td>124.899960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Muunilinst</th>\n",
+       "      <td>5.291503</td>\n",
+       "      <td>117.473401</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             rotation_period    diameter\n",
+       "name                                    \n",
+       "Glee Anselm         5.744563  124.899960\n",
+       "Muunilinst          5.291503  117.473401"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a =  np.sqrt(planets_df[[\"rotation_period\",\"diameter\"]].tail(2))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos como en este caso se ha aplicado la función de numpy, raiz cuadrada, sobre un DataFrame y esta se ha aplicado sobre cada elmento respetando los índices fila y columna de la tabla."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ALINEAMIENTO DE LOS ÍNDICES\n",
+    "\n",
+    "Cuando se realizan operaciones aritméticas,  entre dos pandas, los índices fila y columna se alinean automáticamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2500,7 @@
        "Endor        0.85  0.397722"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2494,7 +2573,7 @@
        "Geonosis     0.90  246.223329"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2506,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2573,7 +2652,7 @@
        "Geonosis      NaN       NaN"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2591,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2731,7 @@
        "Endor        0.85  0.397722"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2663,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2674,7 +2753,7 @@
        "Name: Alderaan, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2686,7 +2765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2826,7 @@
        "Endor       -0.15 -3.676645"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2767,7 +2846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3187,7 @@
        "Muunilinst     8.357222  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3119,7 +3198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -3210,7 +3289,7 @@
        "Endor        0.85            temperate                   1"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3223,7 +3302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3242,7 +3321,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3261,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3341,7 +3420,7 @@
        "Endor        0.85  temperate                 1.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3356,7 +3435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3368,7 +3447,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3402,7 +3481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3482,7 +3561,7 @@
        "Endor       False    False               False"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3493,7 +3572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3624,7 @@
        "Endor     0.85  temperate                 1.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3556,7 +3635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -3638,7 +3717,7 @@
        "Endor        0.85  temperate                 1.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3670,16 +3749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc7eb0e7278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff24c02a5c0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3713,7 +3792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -3881,7 +3960,7 @@
        "Muunilinst   8.357222  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3903,7 +3982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {
     "scrolled": true
    },
@@ -3949,7 +4028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4020,7 +4099,7 @@
        "Glee Anselm                   1      1.0           80.0  500000000.0   0.65399  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4035,7 +4114,7 @@
    "source": [
     "< [Colecciones de objetos: numpy](modulo1_tema4_Py_31_numpy.ipynb) | [Índice](modulo1_tema4_Py_00_indice.ipynb) | [Control de flujo](modulo1_tema4_Py_40_contr_flujo.ipynb) >\n",
     "\n",
-    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_32_pandas.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_32_pandas.ipynb)__"
    ]
   }
  ],
