--- a/Python/modulo1_tema4_Py_31_numpy.ipynb
+++ b/Python/modulo1_tema4_Py_31_numpy.ipynb
@@ -225,7 +225,7 @@
     "%matplotlib inline\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn; seaborn.set()  # for plot styling\n",
+    "import seaborn; seaborn.set()  # para el estilo de graficos\n",
     "\n",
     "entidades = ['planets','starships','vehicles','people','species']\n",
     "entidades_df = {x: pd.read_pickle('www/' + x + '_df.pkl') for x in entidades}\n",
@@ -596,9 +596,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### OPERACIONES ARITMÉTICAS EN NUMPY\n",
+    "#### FUNCIONES UNIVERSALES\n",
     "\n",
-    "Operaciones aritméticas con numpy."
+    "En numpy las funciones universales o *ufunc*, son un conjunto de funciones vectorizan, es decir, que al aplicarlas sobre un objeto numpy, esta función, se aplica sobre cada uno de los elementos que lo componen. \n",
+    "\n",
+    "> **Recuerda**: Ya se comentó las funciones que vectorizan en el el capitulo de funciones de R. \n",
+    "\n",
+    "Típicamente, las funciones de este tipo son las funciones aritméticas."
    ]
   },
   {
@@ -2284,7 +2288,7 @@
    "source": [
     "< [Colecciones de objetos: listas, tuplas y diccionarios](modulo1_tema4_Py_30_colec_obj.ipynb) | [Índice](modulo1_tema4_Py_00_indice.ipynb) | [Colecciones de objetos: pandas](modulo1_tema4_Py_32_pandas.ipynb) >\n",
     "\n",
-    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_31_numpy.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_31_numpy.ipynb)__"
    ]
   }
  ],
