--- a/Python/modulo1_tema4_Py_60_anexo.ipynb
+++ b/Python/modulo1_tema4_Py_60_anexo.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,25 +185,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Call a valid entity: films,people,planets,species,starships,vehicles\n"
+     ]
+    }
+   ],
    "source": [
     "res = get_entity()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['films', 'people', 'planets', 'species', 'starships', 'vehicles']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,11 +311,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cost_in_credits</th>\n",
+       "      <th>length</th>\n",
+       "      <th>max_atmosphering_speed</th>\n",
+       "      <th>crew</th>\n",
+       "      <th>passengers</th>\n",
+       "      <th>cargo_capacity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>3.100000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>70008.333333</td>\n",
+       "      <td>20.466842</td>\n",
+       "      <td>1012.131579</td>\n",
+       "      <td>8.179487</td>\n",
+       "      <td>36.973684</td>\n",
+       "      <td>1.316797e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>99279.640830</td>\n",
+       "      <td>39.306859</td>\n",
+       "      <td>3191.612032</td>\n",
+       "      <td>23.512451</td>\n",
+       "      <td>102.298843</td>\n",
+       "      <td>4.734958e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2500.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>8000.000000</td>\n",
+       "      <td>3.885000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>9.550000</td>\n",
+       "      <td>380.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>8.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>75000.000000</td>\n",
+       "      <td>16.825000</td>\n",
+       "      <td>815.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>13.500000</td>\n",
+       "      <td>5.800000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>350000.000000</td>\n",
+       "      <td>210.000000</td>\n",
+       "      <td>20000.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>2.000000e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       cost_in_credits      length  max_atmosphering_speed        crew  \\\n",
+       "count        21.000000   38.000000               38.000000   39.000000   \n",
+       "mean      70008.333333   20.466842             1012.131579    8.179487   \n",
+       "std       99279.640830   39.306859             3191.612032   23.512451   \n",
+       "min        2500.000000    1.500000               30.000000    0.000000   \n",
+       "25%        8000.000000    3.885000              100.000000    1.000000   \n",
+       "50%       15000.000000    9.550000              380.000000    1.000000   \n",
+       "75%       75000.000000   16.825000              815.000000    4.000000   \n",
+       "max      350000.000000  210.000000            20000.000000  140.000000   \n",
+       "\n",
+       "       passengers  cargo_capacity  \n",
+       "count   38.000000    3.100000e+01  \n",
+       "mean    36.973684    1.316797e+05  \n",
+       "std    102.298843    4.734958e+05  \n",
+       "min      0.000000    0.000000e+00  \n",
+       "25%      0.000000    1.000000e+01  \n",
+       "50%      1.000000    8.000000e+01  \n",
+       "75%     13.500000    5.800000e+03  \n",
+       "max    500.000000    2.000000e+06  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vehicles_df2.describe()"
    ]
@@ -307,7 +459,7 @@
    "source": [
     "< [Gestión de datos](modulo1_tema4_Py_50_gest_dat.ipynb) | [Índice](modulo1_tema4_Py_00_indice.ipynb)\n",
     "\n",
-    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_60_anexo.ipynb)__ *: <span style=\"color:rgba(255, 99, 71, 0.8)\">Padawan! Cuando inicies sesión en Colab, prepara el entorno ejecutando el siguiente código.</span>*"
+    "__[Abre en Colab](https://colab.research.google.com/github/griu/mbdds_fc20/blob/master/Python/modulo1_tema4_Py_60_anexo.ipynb)__"
    ]
   }
  ],
